samples/_failures_safe/1761291495_ac73ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1032a7db.c: In function ‘main’:
./samples/SAFE/__tmp_1032a7db.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_1032a7db.c:167:5: error: expected declaration or statement at end of input
  167 |     if
      |     ^~
